@@ -2,13 +2,12 @@ package dev.controller;
 
 import dev.dto.DepartmentDto;
 import dev.service.DepartmentService;
-import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.Arrays;
 import java.util.List;
 
 @RestController
@@ -16,6 +15,8 @@ import java.util.List;
 public class DepartmentController {
 
     private DepartmentService departmentService;
+    @Value("${get.departments}")
+    private String url;
 
     public DepartmentController(DepartmentService departmentService) {
         this.departmentService = departmentService;
@@ -23,10 +24,9 @@ public class DepartmentController {
 
     @PostMapping("/save")
     public void addDepartments() {
-        String url = "https://geo.api.gouv.fr/departements";
         RestTemplate restTemplate = new RestTemplate();
         DepartmentDto[] departmentsDto = restTemplate.getForObject(url, DepartmentDto[].class);
         assert departmentsDto != null;
-        this.departmentService.createDepartments(Arrays.asList(departmentsDto));
+        this.departmentService.createDepartments(List.of(departmentsDto));
     }
 }
